...
        android:layout_height="wrap_content"
        android:contentDescription="@string/nummer_welche_die_gezogenen_koenige_darstellt"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/kartenStapelView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koenigeBereitsGezogen"
        tools:ignore="HardcodedText" />

    <TextView
...
        app:layout_constraintTop_toBottomOf="@+id/aktuellerSpieler" />

    <com.example.koenigderschluecke.view.spiel.KartenStapelView
        android:id="@+id/kartenStapelView"
        android:layout_width="382dp"
        android:layout_height="356dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonKarteZiehen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gezogeneKoenigeTextNumber" />

    <TextView
        android:id="@+id/amZug"
...
