...
        app:layout_constraintBottom_toTopOf="@+id/aktuellerSpieler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNaechsteRunde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/grau_button_hintergrund"
        android:text="Nächste Runde"
        android:textColor="@color/black"
...
    <ImageView
        android:id="@+id/imageViewKartenbild"
        android:layout_width="212dp"
        android:layout_height="298dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/karterueckseite"
        app:layout_constraintBottom_toTopOf="@+id/regelZurKarte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ueberschriftGezogeneKarte"
        app:srcCompat="@drawable/karterueckseite" />

    <TextView
...
