...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/singleplayerButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/grau_button_hintergrund"
        android:text="@string/singleplayer_auswahl"
        android:textColor="@color/black"
...
